--- a/index.html
+++ b/index.html
@@ -42,10 +42,10 @@
         <div class="hero-actions">
           <a href="#portfolio" class="btn btn-primary" data-i18n="hero.cta">View My Work</a>
           <div class="hero-social">
-            <a href="https://github.com/fdaniel" target="_blank" rel="noopener" aria-label="GitHub" class="social-link">
+            <!-- <a href="https://github.com/fdaniel" target="_blank" rel="noopener" aria-label="GitHub" class="social-link">
               <svg width="20" height="20" viewBox="0 0 24 24" fill="currentColor"><path d="M12 0c-6.626 0-12 5.373-12 12 0 5.302 3.438 9.8 8.207 11.387.599.111.793-.261.793-.577v-2.234c-3.338.726-4.033-1.416-4.033-1.416-.546-1.387-1.333-1.756-1.333-1.756-1.089-.745.083-.729.083-.729 1.205.084 1.839 1.237 1.839 1.237 1.07 1.834 2.807 1.304 3.492.997.107-.775.418-1.305.762-1.604-2.665-.305-5.467-1.334-5.467-5.931 0-1.311.469-2.381 1.236-3.221-.124-.303-.535-1.524.117-3.176 0 0 1.008-.322 3.301 1.23.957-.266 1.983-.399 3.003-.404 1.02.005 2.047.138 3.006.404 2.291-1.552 3.297-1.23 3.297-1.23.653 1.653.242 2.874.118 3.176.77.84 1.235 1.911 1.235 3.221 0 4.609-2.807 5.624-5.479 5.921.43.372.823 1.102.823 2.222v3.293c0 .319.192.694.801.576 4.765-1.589 8.199-6.086 8.199-11.386 0-6.627-5.373-12-12-12z"/></svg>
-            </a>
-            <a href="linkedin.com/in/filipemacedocarneiro" target="_blank" rel="noopener" aria-label="LinkedIn" class="social-link">
+            </a> -->
+            <a href="htts://linkedin.com/in/filipemacedocarneiro" target="_blank" rel="noopener" aria-label="LinkedIn" class="social-link">
               <svg width="20" height="20" viewBox="0 0 24 24" fill="currentColor"><path d="M20.447 20.452h-3.554v-5.569c0-1.328-.027-3.037-1.852-3.037-1.853 0-2.136 1.445-2.136 2.939v5.667H9.351V9h3.414v1.561h.046c.477-.9 1.637-1.85 3.37-1.85 3.601 0 4.267 2.37 4.267 5.455v6.286zM5.337 7.433c-1.144 0-2.063-.926-2.063-2.065 0-1.138.92-2.063 2.063-2.063 1.14 0 2.064.925 2.064 2.063 0 1.139-.925 2.065-2.064 2.065zm1.782 13.019H3.555V9h3.564v11.452zM22.225 0H1.771C.792 0 0 .774 0 1.729v20.542C0 23.227.792 24 1.771 24h20.451C23.2 24 24 23.227 24 22.271V1.729C24 .774 23.2 0 22.222 0h.003z"/></svg>
             </a>
           </div>
@@ -63,7 +63,7 @@
           <button class="filter-btn active" data-filter="all" data-i18n="filter.all">All</button>
           <button class="filter-btn" data-filter="corporate" data-i18n="filter.corporate">Corporate</button>
           <button class="filter-btn" data-filter="ecommerce" data-i18n="filter.ecommerce">E-commerce</button>
-          <button class="filter-btn" data-filter="editorial" data-i18n="filter.editorial">Editorial</button>
+          <!-- <button class="filter-btn" data-filter="editorial" data-i18n="filter.editorial">Editorial</button> -->
           <button class="filter-btn" data-filter="custom" data-i18n="filter.custom">Custom Dev</button>
         </div>
 
@@ -79,8 +79,8 @@
         <h2 class="section-title" data-i18n="about.title">About Me</h2>
         <div class="about-content">
           <div class="about-text">
-            <p data-i18n="about.text1">Senior WordPress Engineer with extensive experience building and maintaining high-traffic websites for globally recognized brands.</p>
-            <p data-i18n="about.text2">Specialized in custom theme and plugin development, WooCommerce solutions, headless WordPress architectures, performance optimization, and scalable multisite networks.</p>
+            <p data-i18n="about.text1">Hello, i'm a Senior WordPress Engineer, with 10+ years of experience delivering high-performance, scalable and maintainable web solutions. </p>
+            <p data-i18n="about.text2">Strong background in custom WordPress development (themes & plugins), performance optimization (Core Web Vitals / PageSpeed), WooCommerce, and technical leadership. I've always bring the best architecture, improving processes, and delivering robust solutions. I'm Highly autonomous, quality-driven, and focused on long-term maintainability and business impact.</p>
           </div>
           <div class="about-stats">
             <div class="stat">
@@ -107,8 +107,8 @@
         <p class="section-subtitle" data-i18n="contact.subtitle">Interested in working together? Let's connect.</p>
         <div class="contact-links">
           <a href="mailto:fdaniel.mc@gmail.com" class="btn btn-primary" data-i18n="contact.email">Email Me</a>
-          <a href="https://linkedin.com/in/filipecarneiro" target="_blank" rel="noopener" class="btn btn-outline">LinkedIn</a>
-          <a href="https://github.com/filipecarneiro" target="_blank" rel="noopener" class="btn btn-outline">GitHub</a>
+          <a href="htts://linkedin.com/in/filipemacedocarneir" target="_blank" rel="noopener" class="btn btn-outline">LinkedIn</a>
+          <!-- <a href="https://github.com/fdaniel" target="_blank" rel="noopener" class="btn btn-outline">GitHub</a> -->
         </div>
       </div>
     </section>
@@ -116,7 +116,7 @@
 
   <footer class="footer">
     <div class="container">
-      <p>&copy; 2025 Filipe Carneiro. <span data-i18n="footer.rights">All rights reserved.</span></p>
+      <p>&copy; 2026 Filipe Carneiro. <span data-i18n="footer.rights">All rights reserved.</span></p>
     </div>
   </footer>
 
